[package]
name = "winkey"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "rt", "macros", "io-util"] }
tokio-util = "0.7"
tokio-serial = "5.4"
async-trait = "0.1"
thiserror = "2"
tracing = "0.1"
bitflags = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
